[gd_scene load_steps=6 format=3 uid="uid://dd761jofx56rb"]

[ext_resource type="Script" path="res://Rooms/room.gd" id="1_x7ho4"]
[ext_resource type="MeshLibrary" uid="uid://dppgpemvu843t" path="res://Tiles.tres" id="2_vl2cw"]
[ext_resource type="PackedScene" uid="uid://c2cqfr5vkwkpx" path="res://Enemies/enemy.tscn" id="3_caq5p"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7wh5b"]
size = Vector3(47.7897, 24.035, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_3msrs"]
size = Vector3(47.2491, 7.34776, 4.91071)

[node name="Room-Boss-1" type="Node3D"]
script = ExtResource("1_x7ho4")

[node name="GridMap" type="GridMap" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.065, -0.43)
mesh_library = ExtResource("2_vl2cw")
cell_size = Vector3(1.957, 2.09, 2.09)
data = {
"cells": PackedInt32Array(917521, 0, 65, 917520, 0, 65, 917519, 0, 65, 917518, 0, 65, 917517, 0, 65, 458749, 0, 47, 393213, 0, 47, -131075, 0, 655407, -65539, 0, 655407, -196592, 0, 655407, -3, 0, 655407, 65533, 0, 655407, -196608, 65535, 655407, -196608, 1, 655407, -196592, 1, 655407, -196593, 1, 655407, -196594, 1, 655407, -196600, 1, 655407, -196601, 1, 655407, -196602, 1, 655407, -196603, 1, 655407, -196604, 1, 655407, -196605, 1, 655407, -196606, 1, 655407, -196607, 1, 655407, -131073, 1, 655407, -131074, 1, 655407, -131075, 1, 655407, -65539, 1, 655407, -3, 1, 655407, 65533, 1, 655407, -196595, 1, 655407, -196592, 65535, 655407, -131075, 65535, 655407, -131074, 65535, 655407, -131073, 65535, 655407, -196593, 65535, 655407, -196594, 65535, 655407, -196595, 65535, 655407, -196596, 65535, 655407, -196597, 65535, 655407, -196598, 65535, 655407, -196599, 65535, 655407, -196600, 65535, 655407, -196601, 65535, 655407, -196602, 65535, 655407, -196603, 65535, 655407, -196604, 65535, 655407, -196605, 65535, 655407, -196606, 65535, 655407, -196607, 65535, 655407, -65539, 65535, 655407, -3, 65535, 655407, 65533, 65535, 655407, -196595, 0, 655407, -196593, 0, 655407, -196594, 0, 655407, -196596, 0, 655407, -196597, 0, 655407, -196598, 0, 655407, -196599, 0, 655407, -196600, 0, 655407, -196601, 0, 655407, -196602, 0, 655407, -196603, 0, 655407, -196604, 0, 655407, -196605, 0, 655407, -196606, 0, 655407, -196607, 0, 655407, -196608, 0, 655407, -131073, 0, 655407, 131069, 0, 655407, 65557, 0, 47, 21, 0, 47, -65515, 0, 47, -131051, 0, 47, -196591, 0, 47, -196590, 0, 47, -196589, 0, 47, -196588, 0, 47, -196587, 0, 47, 327701, 0, 47, 393237, 0, 47, 131069, 1, 47, -196599, 1, 47, -196598, 1, 47, -196597, 1, 47, -196596, 1, 47, -196591, 1, 47, -196590, 1, 47, -196589, 1, 47, -196588, 1, 47, -196587, 1, 47, -131051, 1, 47, -65515, 1, 47, 21, 1, 47, 65557, 1, 47, 327701, 1, 47, 393237, 1, 47, 458773, 1, 47, 524309, 1, 47, 589845, 1, 47, 589844, 1, 47, 589843, 1, 47, 589842, 1, 47, 589841, 1, 47, 589840, 1, 47, 589839, 1, 47, 589838, 1, 47, 589837, 1, 47, 589836, 1, 47, 589835, 1, 47, 589834, 1, 47, 589833, 1, 47, 589832, 1, 47, 589831, 1, 47, 589830, 1, 47, 589829, 1, 47, 589828, 1, 47, 589827, 1, 47, 589826, 1, 47, 589825, 1, 47, 655359, 1, 47, 655358, 1, 47, 655357, 1, 47, 589821, 1, 47, 524285, 1, 47, 589824, 1, 47, 458773, 0, 47, 524309, 0, 47, 589845, 0, 47, 589844, 0, 47, 589843, 0, 47, 589842, 0, 47, 589841, 0, 47, 589840, 0, 47, 589839, 0, 47, 589838, 0, 47, 589837, 0, 47, 589836, 0, 47, 589835, 0, 47, 589834, 0, 47, 589833, 0, 47, 589832, 0, 47, 589831, 0, 47, 589830, 0, 47, 589829, 0, 47, 589828, 0, 47, 589827, 0, 47, 589826, 0, 47, 589825, 0, 47, 589824, 0, 47, 655359, 0, 47, 655358, 0, 47, 655357, 0, 47, 524285, 0, 47, 589821, 0, 47, 458749, 1, 47, 393213, 1, 47, 393213, 65535, 47, 458749, 65535, 47, 524285, 65535, 47, 589821, 65535, 47, -196591, 65535, 47, -196590, 65535, 47, -196589, 65535, 47, -196588, 65535, 47, -196587, 65535, 47, -131051, 65535, 47, -65515, 65535, 47, 21, 65535, 47, 65557, 65535, 47, 327701, 65535, 47, 393237, 65535, 47, 458773, 65535, 47, 524309, 65535, 47, 589845, 65535, 47, 589844, 65535, 47, 589843, 65535, 47, 589842, 65535, 47, 589841, 65535, 47, 589840, 65535, 47, 589839, 65535, 47, 589838, 65535, 47, 589837, 65535, 47, 589836, 65535, 47, 589835, 65535, 47, 589834, 65535, 47, 589833, 65535, 47, 589832, 65535, 47, 589829, 65535, 47, 589828, 65535, 47, 589827, 65535, 47, 589826, 65535, 47, 589825, 65535, 47, 589824, 65535, 47, 655359, 65535, 47, 655358, 65535, 47, 655357, 65535, 47, 589830, 65535, 47, 589831, 65535, 47, 589822, 0, 47, -65538, 0, 47, -131052, 0, 47, 524308, 0, 47, 524307, 65535, 47, 458772, 65535, 47, -65516, 65535, 47, -131053, 65535, 47, -65537, 65535, 47, -2, 65535, 47, 524286, 65535, 47, 589823, 65535, 47, 131093, 0, 47, 196605, 0, 47, 131093, 65535, 47, 131069, 65535, 47, 196605, 65535, 47, 196605, 1, 47, 131093, 1, 47, 131092, 0, 47, 327700, 0, 47, 327677, 0, 47, 262141, 0, 47, 262141, 1, 47, 327677, 1, 47, 327677, 65535, 47, 262141, 65535, 47)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="Objects" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.677, 2.703, 0)

[node name="Enemy4" parent="Objects" instance=ExtResource("3_caq5p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22.1991, 2.28943, 0.313982)
Name = "daughter"

[node name="Enemy5" parent="Objects" instance=ExtResource("3_caq5p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.521, 2.28943, 0.313982)
Name = "Wife"
GoLeft = true

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.7935, 7.29668, 0)
shape = SubResource("BoxShape3D_7wh5b")

[node name="Area3D2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.27237, -0.266607, -0.137827)
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19.7318, -0.64206, 0.548993)
shape = SubResource("BoxShape3D_3msrs")

[connection signal="area_entered" from="Area3D" to="." method="_on_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_exited"]
[connection signal="area_entered" from="Area3D2" to="." method="_on_area_3d_2_area_entered"]
