[gd_scene load_steps=7 format=3 uid="uid://boyuy7ll3la4p"]

[ext_resource type="Script" path="res://Rooms/room.gd" id="1_yncig"]
[ext_resource type="MeshLibrary" uid="uid://dppgpemvu843t" path="res://Tiles.tres" id="2_7n5wn"]
[ext_resource type="PackedScene" uid="uid://c2cqfr5vkwkpx" path="res://Enemies/enemy.tscn" id="4_56jdu"]
[ext_resource type="PackedScene" uid="uid://6d4dgskangq2" path="res://Other/Spike.tscn" id="5_gfxgj"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7wh5b"]
size = Vector3(82.1419, 16.5157, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_x30fu"]
size = Vector3(13.7303, 5.14019, 1)

[node name="Room-End-Right" type="Node3D"]
script = ExtResource("1_yncig")

[node name="GridMap" type="GridMap" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.065, -0.43)
mesh_library = ExtResource("2_7n5wn")
cell_size = Vector3(1.957, 2.09, 1.455)
data = {
"cells": PackedInt32Array(917521, 0, 65, 917520, 0, 65, 917519, 0, 65, 917518, 0, 65, 917517, 0, 65, -196611, 0, 655407, -196610, 0, 655407, -196609, 0, 655407, -262144, 0, 655407, -262143, 0, 655407, -262142, 0, 655407, -262141, 0, 655407, -262140, 0, 655407, -262139, 0, 655407, -262138, 0, 655407, -262137, 0, 655407, -262136, 0, 655407, -131075, 0, 655407, -131068, 0, 655407, -196604, 0, 655407, -131073, 0, 655407, -131074, 0, 655407, -65538, 0, 655407, -65539, 0, 655407, -65540, 0, 655407, -196601, 0, 655407, -131065, 0, 655407, -65529, 0, 655407, -65528, 0, 655407, -131064, 0, 655407, -196600, 0, 655407, -131069, 0, 655407, -196605, 0, 655407, -196599, 0, 655407, -196598, 0, 655407, -196597, 0, 655407, -131060, 0, 655407, -131059, 0, 655407, -196596, 0, 655407, -196595, 0, 655407, -262135, 0, 655407, -262134, 0, 655407, -262133, 0, 655407, -262132, 0, 655407, -262131, 0, 655407, -262130, 0, 655407, -262129, 0, 655407, -262128, 0, 655407, -196593, 0, 655407, -196592, 0, 655407, -131054, 0, 655407, -131053, 0, 655407, -196590, 0, 655407, -262126, 0, 655407, -262127, 0, 655407, -262125, 0, 655407, -196589, 0, 655407, -262124, 0, 655407, -262123, 0, 655407, -196587, 0, 655407, -196588, 0, 655407, -196584, 0, 655407, -196583, 0, 655407, -196580, 0, 655407, -196579, 0, 655407, -262115, 0, 655407, -262116, 0, 655407, -327659, 0, 655407, -393195, 0, 655407, -393194, 0, 655407, -393193, 0, 655407, -393192, 0, 655407, -393191, 0, 655407, -393190, 0, 655407, -393189, 0, 655407, -393188, 0, 655407, -393187, 0, 655407, -327652, 0, 655407, -327651, 0, 655407, -262120, 0, 655407, -327656, 0, 655407, -327655, 0, 655407, -262119, 0, 655407, -131048, 0, 655407, -131047, 0, 655407, -262114, 0, 655407, -262113, 0, 655407, -262112, 0, 655407, -262111, 0, 655407, -262110, 0, 655407, -262109, 0, 655407, -65504, 0, 655407, -65503, 0, 655407, -65502, 0, 655407, -65501, 0, 655407, -131037, 0, 655407, -196573, 0, 655407, 131107, 0, 655407, 196643, 0, 655407, 131068, 0, 655407, 196604, 0, 655407, 262140, 0, 655407, -131076, 0, 655407, -196612, 0, 655407, 327676, 0, 655407, 327677, 0, 655407, 327678, 0, 655407, 327679, 0, 655407, 262144, 0, 655407, 262145, 0, 655407, 262146, 0, 655407, 262149, 0, 655407, 262150, 0, 655407, 262151, 0, 655407, 262152, 0, 655407, 262153, 0, 655407, 262154, 0, 655407, 262155, 0, 655407, 262148, 0, 655407, 262147, 0, 655407, 262156, 0, 655407, 262157, 0, 655407, 262158, 0, 655407, 262159, 0, 655407, 262160, 0, 655407, 262161, 0, 655407, 262162, 0, 655407, 262163, 0, 655407, 262164, 0, 655407, 262165, 0, 655407, 262166, 0, 655407, 262167, 0, 655407, 262168, 0, 655407, 262169, 0, 655407, 262170, 0, 655407, 262171, 0, 655407, 262172, 0, 655407, 262173, 0, 655407, 262174, 0, 655407, 262175, 0, 655407, 262176, 0, 655407, 262177, 0, 655407, 262178, 0, 655407, 262179, 0, 655407)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="Objects" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.677, 2.703, 0)

[node name="Enemy" parent="Objects" instance=ExtResource("4_56jdu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.9414, -5.80354, 0.313982)
Name = "auntie"

[node name="Enemy2" parent="Objects" instance=ExtResource("4_56jdu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 60.2593, -8.46153, 0.313982)
Name = "uncle"

[node name="Spike" parent="Objects" instance=ExtResource("5_gfxgj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30.6343, -9.20482, 0)

[node name="Spike2" parent="Objects" instance=ExtResource("5_gfxgj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40.5619, -13.3413, 0)

[node name="Spike3" parent="Objects" instance=ExtResource("5_gfxgj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 42.5018, -13.3413, 0)

[node name="Spike4" parent="Objects" instance=ExtResource("5_gfxgj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 50.3469, -13.3413, 0)

[node name="Spike5" parent="Objects" instance=ExtResource("5_gfxgj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 48.4355, -13.3413, 0)

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 31.444, 0.516382, 0)
shape = SubResource("BoxShape3D_7wh5b")

[node name="Area3D2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 39.9732, -9.96886, 0)
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.69727, 1.32607, 0)
shape = SubResource("BoxShape3D_x30fu")

[connection signal="area_entered" from="Area3D" to="." method="_on_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_exited"]
[connection signal="area_entered" from="Area3D2" to="." method="KillZone_entered"]
